force-app/main/default/objects/User_Search_Setting__mdt/User_Search_Setting__mdt.object-meta.xml
<CustomObject>
    <description>Metadata settings to control the user audit search functionality.</description>
    <label>User Search Setting</label>
    <pluralLabel>User Search Settings</pluralLabel>
</CustomObject>