force-app/main/default/objects/User_Search_Setting__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <businessOwnerGroup>Data_Owner_Salesforce_Team</businessOwnerGroup>
    <defaultValue>true</defaultValue>
    <description>Is this search setting enabled?</description>
    <inlineHelpText>Is this search setting enabled?</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>