force-app/main/default/objects/User_Search_Setting__mdt/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <businessOwnerGroup>Data_Owner_Salesforce_Team</businessOwnerGroup>
    <description>The name of the field on the user object.</description>
    <inlineHelpText>The name of the field on the user object.</inlineHelpText>
    <label>User Field Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>