force-app/main/default/objects/User_Search_Setting__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <businessOwnerGroup>Data_Owner_Salesforce_Team</businessOwnerGroup>
    <description>Which order to put these fields in the audit report?  Lower numbers come first.</description>
    <inlineHelpText>Which order to put these fields in the audit report?  Lower numbers come first.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>