force-app/main/default/objects/User_Search_Setting__mdt/fields/Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Search_Field__c</fullName>
    <businessOwnerGroup>Data_Owner_Salesforce_Team</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>Is this the field used to match existing records?</description>
    <inlineHelpText>Is this the field used to match existing records?</inlineHelpText>
    <label>Search Field</label>
    <type>Checkbox</type>
</CustomField>