force-app/main/default/objects/User_Search_Setting__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Field_Name__c</columns>
    <columns>Search_Field__c</columns>
    <columns>Order__c</columns>
    <columns>Enabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>